--- a/Views/Home/Main.cshtml
+++ b/Views/Home/Main.cshtml
@@ -149,10 +149,10 @@
                 </form>
             </li>
             <li>
-                <button class="md-trigger" data-modal="modal-16" style="width: 140px; background-color: rgba(49, 50, 49, 0.66); ">About</button>
+                <button class="md-trigger" data-modal="modal-16" style="width: 140px; background-color: rgba(49, 50, 49, 0.66);margin-bottom:30px; ">About</button>
             </li>
             <li>
-                <button class="md-trigger" data-modal="modal-15" style=" width: 140px; background-color: rgba(49, 50, 49, 0.66);">Services</button>
+                <button class="md-trigger" data-modal="modal-15" style=" width: 140px; background-color: rgba(49, 50, 49, 0.66); margin-bottom: 30px;">Services</button>
             </li>
             <li>
                 <button class="md-trigger" data-modal="modal-17" style="width: 140px; background-color: rgba(49, 50, 49, 0.66); ">Order</button>
