--- a/Views/User/MedList.cshtml
+++ b/Views/User/MedList.cshtml
@@ -32,7 +32,7 @@
 
 </nav>
 
-<div class="row">
+<div class="row" style="margin-right:0;">
     <div class="col-sm-2">
        
             <ul style="margin-top:170px;">
@@ -49,6 +49,7 @@
             </ul>
         </div>
         <div class="col-sm-6">
+            <div style="overflow:scroll; width:100%; height:450px; margin-top:20%">
 
             <div id="section3" class="container-fluid">
                 <h1>Mushtaq Medical Store - Lahore </h1><br/>
@@ -293,7 +294,7 @@
                     </tr>
                 </table>
             </div>
-
+                </div>
         </div>
         <div class="col-sm-4">
             
